--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/netlify": "^6.4.1",
-    "astro": "^5.11.0"
+    "astro": "^5.11.0",
+    "sharp": "^0.34.3"
   }
 }
