--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/netlify": "^6.4.1",
+    "@google/generative-ai": "^0.24.1",
     "astro": "^5.11.0",
+    "openai": "^5.9.0",
     "sharp": "^0.34.3"
   }
 }
