--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "sitemap": "node scripts/generate-sitemap.js",
+    "build:sitemap": "npm run sitemap && npm run build"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
